--- a/index.html
+++ b/index.html
@@ -7,13 +7,104 @@
     <link href="src/output.css" rel="stylesheet"/>
 </head>
 <body>
-
     <!-- Start The Header -->
-    <header>
+    <!-- Navbar -->
+    <header id="navbar" class="fixed top-0 left-0 z-50 w-full transition-all duration-300">
+        <div id="nav-container" class="max-w-full lg:max-w-[74%] lg:mt-4 lg:rounded-2xl mx-auto flex items-center justify-between px-6 py-4 bg-gradient-to-r from-[#1a002b] via-[#2d0145] to-[#1a002b] shadow-lg">
+        
+        <!-- Logo -->
+        <div class="text-white font-bold text-2xl">S</div>
 
+        <!-- Desktop Menu -->
+        <nav class="hidden md:flex space-x-8 text-white font-medium">
+            <a href="#home" class="hover:text-purple-400 transition">Home</a>
+            <a href="#services" class="hover:text-purple-400 transition">Services</a>
+            <a href="#projects" class="hover:text-purple-400 transition">My Projects</a>
+            <a href="#reviews" class="hover:text-purple-400 transition">Reviews</a>
+            <a href="#contact" class="hover:text-purple-400 transition">Contact</a>
+        </nav>
+
+        <!-- Contact Button (Desktop) -->
+        <a
+            href="#contact"
+            class="hidden md:inline-block bg-gradient-to-r from-purple-500 to-pink-500 text-white px-6 py-2 rounded-full shadow-md hover:scale-105 transition"
+        >
+            Contact
+        </a>
+
+        <!-- Mobile Menu Button -->
+        <button id="menu-btn" class="md:hidden text-white focus:outline-none">
+            <!-- Hamburger Icon -->
+            <svg id="menu-open" xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+            </svg>
+            <!-- Close Icon -->
+            <svg id="menu-close" xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+            </svg>
+        </button>
+        </div>
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden md:hidden bg-[#2d0145] text-white space-y-4 px-6 py-6">
+        <a href="#home" class="block hover:text-purple-400">Home</a>
+        <a href="#services" class="block hover:text-purple-400">Services</a>
+        <a href="#projects" class="block hover:text-purple-400">My Projects</a>
+        <a href="#reviews" class="block hover:text-purple-400">Reviews</a>
+        <a href="#contact" class="block hover:text-purple-400">Contact</a>
+        <a
+            href="#contact"
+            class="block bg-gradient-to-r from-purple-500 to-pink-500 text-center px-6 py-2 rounded-full shadow-md mt-4"
+        >
+            Contact
+        </a>
+        </div>
     </header>
     <!-- End The Header -->
     <main>
+        <pre>
+
+
+S
+             A
+            LUT
+             M
+            O N
+            D  E
+            DONT
+          JE SUIS
+          LA  LAN
+          G U E  É
+         L O Q U E N
+        TE      QUESA
+       B  O  U  C  H  E
+      O        P A R I S
+     T I R E   ET   TIRERA
+    T O U             JOURS
+   AUX                  A  L
+ LEM                      ANDS   - Apollinaire
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </pre>
         <!-- Start Section (Hero) -->
         <!-- End Section (Hero) -->
         <!-- Start Section (About) -->
@@ -30,5 +121,30 @@
 
     </footer>
     <!-- End The Footer -->
+    <script>
+        const menuBtn = document.getElementById("menu-btn");
+        const menuOpen = document.getElementById("menu-open");
+        const menuClose = document.getElementById("menu-close");
+        const mobileMenu = document.getElementById("mobile-menu");
+        const navbar = document.getElementById("navbar");
+        const navContainer = document.getElementById("nav-container");
+
+        menuBtn.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+        menuOpen.classList.toggle("hidden");
+        menuClose.classList.toggle("hidden");
+        });
+        window.addEventListener("scroll", () => {
+            if (window.innerWidth >= 768) {
+                if (window.scrollY > 50) {
+                    navContainer.classList.remove("lg:max-w-[74%]", "lg:rounded-2xl", "lg:mt-4");
+                    navContainer.classList.add("max-w-full");
+                } else {
+                    navContainer.classList.add("lg:max-w-[74%]", "lg:rounded-2xl", "lg:mt-4");
+                    navContainer.classList.remove("max-w-full");
+                }
+            }
+        });
+    </script>
 </body>
 </html>
