--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="src/output.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-
 </head>
 <body class="bg-[#27043f]">
     <!-- Start The Header -->
@@ -18,7 +17,8 @@
             <div class="text-white font-bold text-2xl">S</div>
             <!-- Desktop Menu -->
             <nav class="hidden md:flex space-x-8 text-white font-medium">
-                <a href="#home" class="hover:text-purple-400 transition">Home</a>
+                <a href="#hero" class="hover:text-purple-400 transition">Home</a>
+                <a href="#about" class="hover:text-purple-400 transition">About</a>
                 <a href="#services" class="hover:text-purple-400 transition">Services</a>
                 <a href="#projects" class="hover:text-purple-400 transition">My Projects</a>
                 <a href="#reviews" class="hover:text-purple-400 transition">Reviews</a>
@@ -160,6 +160,10 @@
                     Python
                 </span>
                 <span class="flex items-center gap-2 px-6 py-3 bg-white border border-gray-200 rounded-xl shadow-md hover:scale-110 hover:bg-purple-100 transition duration-300">
+                    <i class="devicon-wordpress-plain colored"></i>
+                    Wordpress
+                </span>
+                <span class="flex items-center gap-2 px-6 py-3 bg-white border border-gray-200 rounded-xl shadow-md hover:scale-110 hover:bg-purple-100 transition duration-300">
                     <i class="devicon-csharp-plain colored text-2xl"></i>
                     C#
                 </span>
@@ -216,7 +220,7 @@
                     Web Security
                 </span>
                 <span class="flex items-center gap-2 px-6 py-3 bg-white border border-gray-200 rounded-xl shadow-md hover:scale-110 hover:bg-purple-100 transition duration-300">
-                    <i class="devicon-tensorflow-plain colored text-2xl"></i>
+                    <i class="devicon-tensorflow-original colored"></i>
                     TensorFlow
                 </span>
                 <span class="flex items-center gap-2 px-6 py-3 bg-white border border-gray-200 rounded-xl shadow-md hover:scale-110 hover:bg-purple-100 transition duration-300">
@@ -331,9 +335,134 @@
         </div>
         <!-- End Tech Marquee -->
         <!-- Start Section (About) -->
+        <section id="about" class="relative bg-[#1a062b] text-white py-20 px-6 md:px-16">
+            <div class="container mx-auto">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center 
+                            bg-white/10 backdrop-blur-lg border border-white/20 
+                            rounded-2xl shadow-2xl p-10">
+
+                <!-- الصورة -->
+                <div class="flex justify-center">
+                    <div class="relative w-60 h-60 rounded-full overflow-hidden 
+                                bg-gradient-to-tr from-pink-500 to-yellow-400 p-1 shadow-lg">
+                    <img src="avatar.png" alt="About Me" class="rounded-full object-cover w-full h-full">
+                    </div>
+                </div>
+
+                <!-- النص -->
+                <div>
+                    <h2 class="text-4xl font-bold mb-6">About me</h2>
+                    <p class="text-lg leading-relaxed mb-4">
+                    Welcome to my portfolio! I'm <span class="font-semibold">Sara Howari</span>, 
+                    a passionate UI/UX designer dedicated to creating seamless and visually engaging digital experiences. 
+                    With 2 years of experience, I specialize in designing intuitive interfaces that enhance usability and user satisfaction.
+                    </p>
+                    <p class="text-lg leading-relaxed mb-4">
+                    My skills include wireframing, prototyping, and user research, ensuring that each design is both aesthetically pleasing and functionally efficient.
+                    I have worked on diverse projects, including mobile apps, web platforms, and interactive dashboards.
+                    </p>
+
+                    <div class="flex items-start gap-3 bg-white/10 backdrop-blur-sm border border-white/20 p-4 rounded-xl shadow-md mb-6">
+                    <span class="text-yellow-400 text-2xl">⭐</span>
+                    <p class="text-base">
+                        I am deeply committed to my work, investing creativity and precision into every project 
+                        to ensure a unique and effective user experience.
+                    </p>
+                    </div>
+
+                    <!-- Skills -->
+                    <h3 class="text-2xl font-semibold mb-4">Skills</h3>
+                    <div class="flex flex-wrap gap-3">
+                    <span class="bg-pink-600/70 backdrop-blur-sm border border-white/20 px-4 py-2 rounded-lg shadow-md">Figma</span>
+                    <span class="bg-purple-600/70 backdrop-blur-sm border border-white/20 px-4 py-2 rounded-lg shadow-md">Adobe XD</span>
+                    <span class="bg-orange-600/70 backdrop-blur-sm border border-white/20 px-4 py-2 rounded-lg shadow-md">Illustrator</span>
+                    <span class="bg-blue-600/70 backdrop-blur-sm border border-white/20 px-4 py-2 rounded-lg shadow-md">Photoshop</span>
+                    <span class="bg-indigo-600/70 backdrop-blur-sm border border-white/20 px-4 py-2 rounded-lg shadow-md">Prototyping</span>
+                    </div>
+                </div>
+
+                </div>
+            </div>
+        </section>
         <!-- End Section (About) -->
+        <div class="w-full flex justify-center bg-[#1a062b]">
+            <div class=" w-64 h-1 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full mb-10"></div>
+        </div>
         <!-- Start Section (services) -->
+        <section id="services" class="py-20 bg-gradient-to-b from-[#1a062b] to-[#2a0a3a]">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="text-3xl md:text-4xl font-bold mb-16 text-white relative inline-block">
+                    Our Services
+                    <span class="block w-20 h-1 bg-gradient-to-r from-pink-500 to-purple-500 mx-auto mt-3 rounded-full"></span>
+                </h2>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-10">
+                    <!-- Service Card -->
+                    <div class="group relative bg-white/10 backdrop-blur-md rounded-2xl p-8 border border-white/20 shadow-xl hover:shadow-pink-500/30 transition duration-500 overflow-hidden">
+                        <div class="w-16 h-16 mx-auto mb-6 flex items-center justify-center rounded-full bg-gradient-to-r from-pink-500 to-purple-600 text-white text-3xl shadow-lg group-hover:scale-110 transition">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-3 text-white">Web Development</h3>
+                        <p class="text-gray-300 mb-6">
+                            Modern, responsive, and fast websites built with the latest technologies.
+                        </p>
+                        <a href="#contact" class="inline-block px-5 py-2 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 text-white font-medium shadow-md hover:scale-105 transition">
+                            Get Service
+                        </a>
+                        <!-- Glow Border -->
+                        <div class="absolute inset-0 rounded-2xl border-2 border-pink-500/50 opacity-0 group-hover:opacity-100 animate-pulse"></div>
+                    </div>
+
+                    <!-- Service Card -->
+                    <div class="group relative bg-white/10 backdrop-blur-md rounded-2xl p-8 border border-white/20 shadow-xl hover:shadow-blue-500/30 transition duration-500 overflow-hidden">
+                        <div class="w-16 h-16 mx-auto mb-6 flex items-center justify-center rounded-full bg-gradient-to-r from-blue-500 to-cyan-500 text-white text-3xl shadow-lg group-hover:scale-110 transition">
+                        <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-3 text-white" >Mobile Apps</h3>
+                        <p class="text-gray-300 mb-6">
+                            Cross-platform mobile applications with seamless user experience.
+                        </p>
+                        <a href="#contact" class="inline-block px-5 py-2 rounded-full bg-gradient-to-r from-blue-600 to-cyan-600 text-white font-medium shadow-md hover:scale-105 transition">
+                            Get Service
+                        </a>
+                        <div class="absolute inset-0 rounded-2xl border-2 border-blue-500/50 opacity-0 group-hover:opacity-100 animate-pulse"></div>
+                    </div>
+
+                    <!-- Service Card -->
+                    <div class="group relative bg-white/10 backdrop-blur-md rounded-2xl p-8 border border-white/20 shadow-xl hover:shadow-green-500/30 transition duration-500 overflow-hidden">
+                        <div class="w-16 h-16 mx-auto mb-6 flex items-center justify-center rounded-full bg-gradient-to-r from-green-500 to-emerald-500 text-white text-3xl shadow-lg group-hover:scale-110 transition">
+                        <i class="fas fa-search"></i>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-3 text-white">SEO Optimization</h3>
+                        <p class="text-gray-300 mb-6">
+                            Improve your ranking on search engines and boost organic traffic.
+                        </p>
+                        <a href="#contact" class="inline-block px-5 py-2 rounded-full bg-gradient-to-r from-green-600 to-emerald-600 text-white font-medium shadow-md hover:scale-105 transition">
+                            Get Service
+                        </a>
+                        <div class="absolute inset-0 rounded-2xl border-2 border-green-500/50 opacity-0 group-hover:opacity-100 animate-pulse"></div>
+                    </div>
+
+                    <!-- Service Card -->
+                    <div class="group relative bg-white/10 backdrop-blur-md rounded-2xl p-8 border border-white/20 shadow-xl hover:shadow-pink-500/30 transition duration-500 overflow-hidden">
+                        <div class="w-16 h-16 mx-auto mb-6 flex items-center justify-center rounded-full bg-gradient-to-r from-pink-500 to-red-500 text-white text-3xl shadow-lg group-hover:scale-110 transition">
+                        <i class="fas fa-paint-brush"></i>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-3 text-white">UI/UX Design</h3>
+                        <p class="text-gray-300 mb-6">
+                            Beautiful, user-friendly interfaces designed for maximum engagement.
+                        </p>
+                        <a href="#contact" class="inline-block px-5 py-2 rounded-full bg-gradient-to-r from-pink-600 to-red-600 text-white font-medium shadow-md hover:scale-105 transition">
+                            Get Service
+                        </a>
+                        <div class="absolute inset-0 rounded-2xl border-2 border-pink-500/50 opacity-0 group-hover:opacity-100 animate-pulse"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- End Section (services) -->
+        <div class="w-full flex justify-center bg-[#1a062b]">
+            <div class=" w-64 h-1 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full mb-10"></div>
+        </div>
         <!-- Start Section (projects) -->
         <!-- End Section (projects) -->
         <!-- Start Section (contact) -->
@@ -359,7 +488,7 @@
         });
         window.addEventListener("scroll", () => {
             if (window.innerWidth >= 768) {
-                if (window.scrollY > 50) {
+                if (window.scrollY > 150) {
                     navContainer.classList.remove("lg:max-w-[74%]", "lg:rounded-2xl", "lg:mt-4");
                     navContainer.classList.add("max-w-full");
                 } else {
